--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nimgame",
   "version": "0.1.0",
-  "homepage": "http://michaperki.github.io/nimgame",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
