--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-    "rewrites": [
-        {
-            "source": "/api/*",
-            "destination": "http://localhost:3000/api/*"
-        }
+    "rewrites":  [
+      {"source": "/(.*)", "destination": "/"}
     ]
-}
+  }
